--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ main {
     justify-content: center;
     align-items: flex-end;
 }
+
+button:hover {
+    cursor: pointer;
+}
  
 
 #displays {
@@ -57,8 +61,10 @@ main {
     height: 100px;
     width: 90px;
     font-size: 70px;
+    text-transform: uppercase;
     color: #ffffff;
-    -webkit-text-stroke: 2px #ff5a5a;
+    -webkit-text-stroke: 2px #ff5a5a; 
+    /* I got the text stroke idea from stack overflow */
     border-bottom: 5px solid rgb(255, 255, 255);
     margin-bottom: -50px;
     display: flex;
@@ -84,14 +90,15 @@ main {
 #wrong-letters ul li {
     display: inline;
     font-size: 20px;
+    text-transform: uppercase;
 }
 
 
 #instructions {
     position: absolute;
     background-color: rgb(215, 159, 84);
-    height: 32vh;
-    width: 55vh;
+    height: 270px;
+    width: 430px;
     top: 33%;
     border-style: solid;
     border-width: 5px;
@@ -115,19 +122,19 @@ main {
     /* align-items: center; */
 }
 
-#home {
+#home-screen {
     position: absolute;
     top: 40%;
     text-align: center;
 }
 
-#home h1 {
+#home-screen h1 {
     font-family: honk;
-    font-size: 100px;
+    font-size: 10vh;
     line-height: 2px;
 }
 
-#home button {
+#home-screen button {
     background-color: #fc3f3f;
     border-radius: 7px;
     height: 85px;
@@ -137,15 +144,11 @@ main {
     margin: 0;
 }
 
-#home button:hover {
-    cursor: pointer;
-}
-
 #input-popup {
     position: absolute;
     background-color: rgb(215, 159, 84);
-    height: 32vh;
-    width: 55vh;
+    height: 300px;
+    width: 350px;
     top: 33%;
     border-style: solid;
     border-width: 5px;
@@ -169,6 +172,31 @@ main {
     height: 50px;
     width: 130px;
     margin-top: 20px;
+}
+
+#end-graphics {
+    position: absolute;
+    font-size: 40px;
+    background-color: rgb(215, 159, 84);
+    line-height: 50px;
+    height: 250px;
+    width: 380px;
+    top: 33%;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #ffffff;
+    border-radius: 40px;
+    text-align: center;;
+}
+
+#end-graphics button {
+    background-color: #fc3f3f;
+    border-radius: 7px;
+    height: 70px;
+    width: 150px;
+    font-size: 23px;
+    padding: 16px;
+    margin: 0 10px;
 }
 
 
