--- a/style.css
+++ b/style.css
@@ -119,19 +119,18 @@ button:hover {
     font-size: 32px;
     padding: 16px;
     margin: 0;
-    /* align-items: center; */
 }
 
 #home-screen {
     position: absolute;
-    top: 40%;
+    top: 19%;
     text-align: center;
 }
 
 #home-screen h1 {
     font-family: honk;
-    font-size: 10vh;
-    line-height: 2px;
+    font-size: 8vw;
+    line-height: 100px;
 }
 
 #home-screen button {
@@ -180,13 +179,25 @@ button:hover {
     background-color: rgb(215, 159, 84);
     line-height: 50px;
     height: 250px;
-    width: 380px;
+    width: 415px;
     top: 33%;
     border-style: solid;
     border-width: 5px;
     border-color: #ffffff;
     border-radius: 40px;
     text-align: center;;
+}
+
+@keyframes blink {
+    50% {
+      opacity: 0;
+    }
+  }
+/* Sean helped me with this */
+
+#end-graphics-text {
+    text-align: center;
+    animation: blink 1s 3 alternate;
 }
 
 #end-graphics button {
