--- a/style.css
+++ b/style.css
@@ -225,6 +225,8 @@ button:hover {
     padding: 0;
     margin: -1px 0 0 0;
 }
+/* This was to make the img tag for the background image not apear on the screen. Learned from stack overflow. */
+
 
 /* keep at the bottom  */
 .toggle {
